# armatron

./: LICENSE  README.md
CAD Files/: armatron_7 v117.stl  base_mount_p1_nylon_toleranced.3mf  base_mount_p1_nylon_toleranced.stl  base_stand_p1_nylon.stl  brachium_arm_p1_nylon_toleranced.3mf  brachium_arm_p1_nylon_toleranced.stl  mg4005-test-mount-v1.3mf  mg4005-test-mount-v1.stl  mg4010-test-mount-v1.stl  mg4010_mg4005-test-arm-v1.stl  mg8008_test_stand.stl  mg8008_test_stand_bambu.3mf  shoulder_plate_base_p1_nylon_toleranced.stl  shoulder_plate_base_p1_nylon_toleranced_bambu.3mf  shoulder_plate_motor_p1_nylon_toleranced.stl  shoulder_plate_motor_p1_nylon_toleranced_bambu.3mf  shoulder_plate_support_p1_nylon_toleranced.stl  shoulder_plate_support_p1_nylon_toleranced_bambu.3mf  torque_test_stand v1 Bambu.3mf  torque_test_stand v1.stl
CAD Files/Differential Prints/: main_axle.step  pignon_ab.step  pulley_diff.step
CAD Files/Elbow Prints/: armatron_7 v125.stl  base_stand_p1_nylon.3mf  elbow_bambu_project.3mf  mount_p1_nylon_toleranced.stl
CAD Files/Electrical Raceway Prints/: armatron_7 v181.step  joint_1_lid.step  joint_1_lid_prototype_v1.step  joint_1_lid_prototype_v2.step  joint_raceway_jboxs.3mf  tool_m12_shield.step
CAD Files/Electronics CAD/: LRS-350(N2).stp  RSP-2000..stp
CAD Files/Forearm Prints/: arm_to_motor_p1_nylon_toleranced.stl  elbow_to_forearm_arm_p1_nylon_toleranced.stl
CAD Files/Shoulder Prints/: shoulder_faceplate.step
CAD Files/Test Mounts/: big_indicator_attachment.stl  force_gauge_mount.3mf  force_gauge_mount.stl  mg8008-test-mount.3mf  mg8008-test-mount.stl  mg8015-test-mount.stl
CAD Files/Wrist Prints/: divider.step  mg4005_motor_mount.step  mg4005_motor_pulley.step  mg4005_spacer.step  motor_mount.step  motor_spacer_short.step  pulley_outer_piece.step  pulley_spacer_guard.step  side_panel_long.step  side_panel_short.step  tensioner_inner_rod.step  tensioner_outer_shell.step
Resources/: Armatron BOM + Technical Components Sheets.xlsx  Motor Speed and Position Tuning.xlsx  Motor Technical Data.xlsx  Motor Torque Testing.xlsx  Robot Demo Table _ Zero and Home Positions.docx  Torque Calculations.xlsx
armatron_software/: .gitignore  .last_build_timestamp  LICENSE  README.md  setup_dev.sh  toolchain.cmake
armatron_software/controls/: CMakeLists.txt  main_debug.cpp  main_realtime.cpp
armatron_software/controls/include/: can_handler.hpp  kdl_parser.hpp  kinematics_interface.hpp  motor_defs.hpp  motor_interface.hpp  real_time_daemon.hpp  robot_interface.hpp  utils.hpp
armatron_software/controls/src/: can_handler.cpp  kdl_parser.cpp  kinematics_interface.cpp  motor_interface.cpp  real_time_daemon.cpp  robot_interface.cpp
armatron_software/deploy/: real_time_daemon  setup_bbb.sh
armatron_software/ruckig_test/: CMakeLists.txt
armatron_software/ruckig_test/include/: mock_motor.hpp  mock_robot.hpp  motor_defs.hpp
armatron_software/ruckig_test/src/: main.cpp
armatron_software/web/: index.html  (+5 more)
(+52 files in other folders)
